// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webpack-tests > 1. extracts to a div for simple views, flat transforms 1`] = `
<span
  className="t_dark is_inversed _dsp_contents"
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="  _dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-1 _fg-1 _btlr-100px _btrr-100px _bbrr-100px _bblr-100px _bg-red _bxsh-469092149 _scale-0hover-2  test1"
    >
      <span
        className="  _ff-299667014 _dsp-inline _bxs-border-box _ww-break-word _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _col-675002279 font_body "
      >
        hello world
      </span>
    </div>
  </span>
</span>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 1`] = `
<span
  className=" _dsp_contents"
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="  _dsp-flex _ai-stretch _fd-row _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _ox-hidden _oy-hidden  who"
      onClick={[Function]}
    />
    <div
      className="_dsp-flex _ai-stretch _fd-row _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _pt-2px _pb-2px _t-0px ease-in-out-top _t--14px _bg-fff35 "
    >
      <span
        className="  _ff-299667014 _dsp-inline _bxs-border-box _ww-break-word _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _col-675002279 font_body "
      >
        hello world
      </span>
    </div>
  </span>
</span>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 2`] = `
<span
  className=" _dsp_contents"
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="  _dsp-flex _ai-stretch _fd-row _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _ox-hidden _oy-hidden  who"
      onClick={[Function]}
    />
    <div
      className="_dsp-flex _ai-stretch _fd-row _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _bg-00035 _pt-2px _pb-2px _t-0px ease-in-out-top "
    >
      <span
        className="  _ff-299667014 _dsp-inline _bxs-border-box _ww-break-word _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _col-675002279 font_body "
      >
        hello world
      </span>
    </div>
  </span>
</span>
`;

exports[`webpack-tests > 5. spread conditional 1`] = `
<span
  className=" _dsp_contents"
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _ox-hidden _oy-hidden _bg-blue "
    >
      <div
        className="_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _ox-hidden _oy-hidden hello-world _bg-blue "
      />
    </div>
  </span>
</span>
`;

exports[`webpack-tests > 6. spread ternary 1`] = `
<span
  className=" _dsp_contents"
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _ox-hidden _oy-hidden _bg-blue "
    >
      <span
        className="  _ff-299667014 _dsp-inline _bxs-border-box _ww-break-word _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _col-675002279 font_body "
      >
        hello world
      </span>
    </div>
  </span>
</span>
`;

exports[`webpack-tests > 6. spread ternary 2`] = `
<span
  className=" _dsp_contents"
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _ox-hidden _oy-hidden _bg-red "
    >
      <span
        className="  _ff-299667014 _dsp-inline _bxs-border-box _ww-break-word _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _col-675002279 font_body "
      >
        hello world
      </span>
    </div>
  </span>
</span>
`;

exports[`webpack-tests > 7. ternary + data-is 1`] = `
<span
  className=" _dsp_contents"
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _fs-0 _pr-11px _pl-11px _pb-10px _w-6637 _miw-500px _maw-3037"
      style={{}}
    >
      <div
        className="_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _w-10px _h-10px "
      />
    </div>
  </span>
</span>
`;

exports[`webpack-tests > 8. styleExpansions 1`] = `
<span
  className=" _dsp_contents"
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="  _dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _mih-0px _miw-0px _fs-0 _pos-relative _t-0px _l-0px _r-0px _b-0px "
    >
      <div
        className="_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _bg-red"
        style={{}}
      >
        <div
          className="_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _mih-0px _miw-0px _fs-0 _pos-relative _t-0px _l-0px _r-0px _b-0px _bg-white _col-blue"
          style={{}}
        />
      </div>
    </div>
  </span>
</span>
`;

exports[`webpack-tests > 9. combines with classname 1`] = `
<span
  className=" _dsp_contents"
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="  _dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _pt-15px _pb-15px  home-top-dish"
    />
  </span>
</span>
`;

exports[`webpack-tests > 10. extracts Text 1`] = `
<span
  className=" _dsp_contents"
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <span
      className="  _ff-299667014 _dsp-inline _bxs-border-box _ww-break-word _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _col-675002279 _fos-10px font_body "
    >
      <span
        className="  _ff-299667014 _dsp-inline _bxs-border-box _ww-break-word _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _col-675002279 _ussel-auto font_body "
      >
        <span
          className="font_body _ff-299667014 _dsp-inline _bxs-border-box _ww-break-word _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _col-00035 _fos-15px _fow-600"
          style={{}}
        >
          hello
        </span>
      </span>
    </span>
  </span>
</span>
`;

exports[`webpack-tests > 12. te  rnary multiple on same key 1`] = `
<span
  className=" _dsp_contents"
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _o-1 _transform- "
    />
  </span>
</span>
`;

exports[`webpack-tests > 14. extracts pseudo styles and evaluates constants 1`] = `
<span
  className=" _dsp_contents"
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="_bg-0hover-red _bg-0active-blue _dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0"
      style={{}}
    />
  </span>
</span>
`;

exports[`webpack-tests > 15. extracts spacer (complex expansion) 1`] = `
<span
  className=" _dsp_contents"
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <span
      className="  is_Spacer _dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-1316330176 _miw-1316330176 _fs-0 _w-1316330176 _h-1316330176 _pe-none "
    />
    <span
      className="  is_Spacer _dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-10px _miw-10px _fs-1 _pe-none _fg-1 _w-10px _h-10px "
    />
  </span>
</span>
`;

exports[`webpack-tests > 16. deopt when spreading multiple 1`] = `
<span
  className=" _dsp_contents"
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-1 _fg-1 _bg-red"
      conditional={true}
      style={{}}
    />
  </span>
</span>
`;
